--- a/styleerror.css
+++ b/styleerror.css
@@ -83,7 +83,7 @@ header {
 main {
     flex: 1 1 auto;
     min-width: 980px;
-    background: rgb(66, 91, 126);
+    background: #223847;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -94,6 +94,7 @@ main {
     width: 100%;
     max-height: 500px;
     border-radius: 50%;
+    align-self: center;
     padding: 6px 25px;
 }
 
@@ -118,7 +119,7 @@ main {
 .top {
     width: 30%;
     min-height: 80%;
-    background: rgb(36, 47, 63);
+    background: #362f24;
     position: absolute;
     right: 15%;
     display: flex;
@@ -204,7 +205,7 @@ form {
 
 fieldset {
     background: rgb(255, 255, 255);
-    border: 3px outset #EE6BA7;
+    border: 3px outset rgb(153, 167, 62);
 }
 
 legend {
@@ -239,7 +240,7 @@ legend {
 button[value="submit"] {
     display: block;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    background-color: #EE6BA7;
+    background-color: rgb(153, 167, 62);
     font-weight: 700;
     width: 90%;
 }
@@ -277,8 +278,8 @@ button[type="submit"]:hover {
 
 .btn-input {
     color: rgb(255, 255, 255);
-    background-color: #EE6BA7;
-    border-color: #7FAEF0;
+    background-color: rgb(153, 167, 62);
+    border-color: rgb(29, 129, 209);
 }
 
 .change,
@@ -343,7 +344,7 @@ img#dp_result {
     margin: 0 auto;
     border: none;
     outline: none;
-    background: #EE6BA7;
+    background: rgb(153, 167, 62);
     color: #fff;
 }
 
